--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
