--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.8",
+    "vuex": "^3.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
@@ -39,6 +40,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^4.13.5",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "vuetify": "^1.0.14"
   }
 }
