--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "concurrently": "^3.5.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "jquery": "^3.2.1",
+    "node-sass": "^4.8.3",
     "nodemon": "^1.12.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.20.3",
     "toastr": "^2.1.2",
     "vue": "^2.5.8",
     "vue-axios": "^2.0.2",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.8",
     "vuex": "^3.0.1",
-    "webpack": "^3.8.1",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
